test_src/compiler_errors/types/demotion/DemoteFloatToInt.b
class DemoteFloatToInt {
    void test() {
        Int value = 2.0f;
        println(value);
    }
}
